@@ -1,3 +1,10 @@
+2002-07-01  Joshua Sled  <jsled@asynchronous.org>
+
+	* src/gnome/dialog-scheduledxaction.c:
+	* src/gnome/dialog-sxsincelast.c: 
+	* src/app-utils/prefs.scm: Added options/code-support for
+	saving/restoring sizes of SX-related windows.  Fixes bug 86007.
+
 2002-07-01  Derek Atkins  <derek@ihtfp.com>
 	* Convert all (well, most all) HTML URL-generators to use
 	gnc_build_url() (or gnc:html-build-url in scheme) instead of
